[package]
name = "mxsphere-milter"
version = "0.1.0"
authors = ["Manuel Mely <mmely@mmely.de>"]
keywords = ["smtp", "daemon", "mxsphere", "postfix", "milter"]
edition = "2018"

[dependencies]
async-trait = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = { version = "0.15.0"}
chrono = { version = "0.4.11", features = ["serde"] }
addr = "0.2.0"
thiserror = "1.0.15"
lazy_static = "1.4.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "time", "ipnetwork" ] }
tokio = { version = "0.2.21", features = ["full"] }
once_cell = "1.4.0"
milter = "0.2"
libc = "0.2"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }


